--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 @font-face {
+    font-family:"STARWARS";
+    src:url("fonts/STARWARS.eot?") format("eot"),
+        url("fonts/STARWARS.woff") format("woff"),
+        url("fonts/STARWARS.ttf") format("truetype"),
+        url("fonts/STARWARS.svg#STARWARS") format("svg");
+    font-weight:normal;
+    font-style:normal;
+}
+
+@font-face {
     font-family: 'StarWars';
-    src: url('fonts/StarJedi-DGRW.ttf') format('truetype'), url('fonts/StarJediHollow-A4lL.ttf') format('truetype'); 
+    src: url('fonts/STARWARS.ttf') format('truetype'), url('fonts/STARWARS.woff') format('woff'); 
 }
 
 h1, 
@@ -9,7 +19,7 @@ h3,
 p {
   /* font-family: "Helvetica", sans-serif; */
   /* font-family: 'Nosifer', cursive; */
-  font-family: 'StarWars';
+  font-family: 'STARWARS';
 }
 
 h1 {
