--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h3,
 p {
   /* font-family: "Helvetica", sans-serif; */
   /* font-family: 'Nosifer', cursive; */
-  font-family: 'Arial', sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
 h1 {
