connecting to aws

--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Srishti's Dinner Parties</title>
+    <title>Tequila Tuesdays</title>
     <link href="../static/style.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="../static/index.js"></script>
 </head>
 <body style="background-color: #ffc0cb;">
   <div class="top-panel">
-    <h1>Srishti's Dinner Parties</h1>
+    <h1>Tequila Tuesdays</h1>
   </div>
 
   <div class="middle-panel">
