--- a/templates/loading-page.html
+++ b/templates/loading-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tequila Tuesdays</title>
+    <title>Time Fries</title>
     <link href="../static/style.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="../static/index.js"></script>
     <script type="text/javascript">
