disabled ability to go forward w/o sign in

--- a/templates/contribution-signups-page.html
+++ b/templates/contribution-signups-page.html
@@ -111,3 +111,11 @@
 
 </body>
 </html>
+
+<script>
+  window.onpageshow = function(event) {
+      if (!sessionStorage.getItem("userName")) {
+          noSession();
+      }
+  };
+</script>
