--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -116,3 +116,11 @@
 
 </body>
 </html>
+
+<script>
+  window.onpageshow = function(event) {
+      if (!sessionStorage.getItem("userName")) {
+          noSession();
+      }
+  };
+</script>
