--- a/templates/loading-page.html
+++ b/templates/loading-page.html
@@ -4,25 +4,8 @@
     <title>Time Fries</title>
     <link href="../static/style.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="../static/index.js"></script>
-    <script type="text/javascript">
-      function changeHash() {
-        window.location.href += "#";
-        setTimeout("changeHashAgain()", "50")
-      }
-
-      function changeHashAgain() {
-        window.location.href += "1";
-      }
-
-      var storedHash = window.location.hash;
-      window.setInterval(function() {
-        if (window.location.hash != storedHash) {
-          window.location.hash = storedHash;
-        }
-      }, 50);
-      window.onload=changeHash;
-    </script>
 </head>
+
 <body>
   <div id="loading-page">
     <div id="user-input-container">
@@ -33,3 +16,15 @@
   </div>
 </body>
 </html>
+
+<script>  
+  window.onload = function() {
+    sessionStorage.clear();
+  };
+
+  window.onpageshow = function(event) {
+    if (event.persisted) {
+        window.location.reload();
+    }
+  };
+</script>
