--- a/templates/indv-party-page.html
+++ b/templates/indv-party-page.html
@@ -59,3 +59,11 @@
   
 </body>
 </html>
+
+<script>
+  window.onpageshow = function(event) {
+      if (!sessionStorage.getItem("userName")) {
+          noSession();
+      }
+  };
+</script>
