--- a/templates/my-rsvps-list-page.html
+++ b/templates/my-rsvps-list-page.html
@@ -46,3 +46,11 @@
 
 </body>
 </html>
+
+<script>
+  window.onpageshow = function(event) {
+      if (!sessionStorage.getItem("userName")) {
+          noSession();
+      }
+  };
+</script>
